--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -75,6 +75,9 @@
   --leading-normal: 1.5;
   --leading-relaxed: 1.625;
   --leading-loose: 2;
+
+  // Slider fill percentage
+  --fill-percent: 0;
 }
 
 // Add this after your existing :root declaration
@@ -296,17 +299,68 @@ input[type='range']::-webkit-slider-thumb {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background: transparent;
+  // background: transparent;
+  background: rgb(124 58 237);
   cursor: pointer;
+  position: relative;
+  z-index: 2;
 }
 
 input[type='range']::-moz-range-thumb {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background: transparent;
+  // background: transparent;
+  background: rgb(124 58 237);
   cursor: pointer;
   border: none;
+  position: relative;
+  z-index: 2;
+}
+
+// Slider container for custom styling
+.slider-container {
+  position: relative;
+  height: 20px; // Match thumb height for centering
+}
+
+.slider-container input[type='range'] {
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+.slider-container::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  height: 2px;
+  background: rgb(229 231 235);
+  width: 100%;
+  border-radius: 1px;
+  z-index: 1;
+}
+
+.slider-container::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  height: 2px;
+  background: rgb(124 58 237);
+  width: calc(var(--fill-percent) * 1%);
+  border-radius: 1px;
+  z-index: 1;
 }
 
 // Cards
